--- a/ggt-coder_Data/StreamingAssets/Laravel/CodeTemplate/composer.json
+++ b/ggt-coder_Data/StreamingAssets/Laravel/CodeTemplate/composer.json
@@ -20,7 +20,8 @@
         "laravel/ui": "^3.2",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/laravel-wechat": "^5.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
